--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "method-override": "^3.0.0",
         "multer": "^1.4.4",
         "mysql2": "^2.3.3",
-        "sequelize": "^6.17.0"
+        "sequelize": "^6.17.0",
+        "validator": "^13.7.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.15"
