--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "homepage": "https://github.com/naalonso29/grupo_nicolasalonso_allpadel#readme",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
         "ejs": "^3.1.6",
         "express": "^4.17.3",
         "express-session": "^1.17.2",
